--- a/demoPandas.ipynb
+++ b/demoPandas.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2022-12-01</th>\n",
        "      <td>10</td>\n",
        "      <td>100</td>\n",
        "      <td>1</td>\n",
@@ -172,7 +172,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2022-12-02</th>\n",
        "      <td>20</td>\n",
        "      <td>200</td>\n",
        "      <td>2</td>\n",
@@ -180,7 +180,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>2022-12-03</th>\n",
        "      <td>30</td>\n",
        "      <td>300</td>\n",
        "      <td>3</td>\n",
@@ -188,7 +188,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2022-12-04</th>\n",
        "      <td>40</td>\n",
        "      <td>400</td>\n",
        "      <td>4</td>\n",
@@ -196,7 +196,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2022-12-05</th>\n",
        "      <td>50</td>\n",
        "      <td>500</td>\n",
        "      <td>5</td>\n",
@@ -204,7 +204,7 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2022-12-06</th>\n",
        "      <td>60</td>\n",
        "      <td>600</td>\n",
        "      <td>6</td>\n",
@@ -216,24 +216,78 @@
        "</div>"
       ],
       "text/plain": [
-       "   private  org  foreigner  sratio  sprice\n",
-       "0       10  100          1      10       1\n",
-       "1       20  200          2      20       2\n",
-       "2       30  300          3      30       3\n",
-       "3       40  400          4      40       4\n",
-       "4       50  500          5      50       5\n",
-       "5       60  600          6      60       6"
+       "            private  org  foreigner  sratio  sprice\n",
+       "2022-12-01       10  100          1      10       1\n",
+       "2022-12-02       20  200          2      20       2\n",
+       "2022-12-03       30  300          3      30       3\n",
+       "2022-12-04       40  400          4      40       4\n",
+       "2022-12-05       50  500          5      50       5\n",
+       "2022-12-06       60  600          6      60       6"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frame = DataFrame(data, columns =[\"private\", \"org\",\"foreigner\", \"sratio\",\"sprice\"] )\n",
-    "#type(frame)\n",
+    "frame = DataFrame(data, \n",
+    "            columns =[\"private\", \"org\",\"foreigner\", \"sratio\",\"sprice\"],\n",
+    "            index=[\"2022-12-01\",\"2022-12-02\",\"2022-12-03\",\"2022-12-04\",\"2022-12-05\",\"2022-12-06\"] )\n",
+    "# 데이터 셋(데이터프레임)\n",
     "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2022-12-01    100\n",
+       "2022-12-02    200\n",
+       "2022-12-03    300\n",
+       "2022-12-04    400\n",
+       "2022-12-05    500\n",
+       "2022-12-06    600\n",
+       "Name: org, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# column 슬라이싱\n",
+    "frame[\"org\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "private       10\n",
+       "org          100\n",
+       "foreigner      1\n",
+       "sratio        10\n",
+       "sprice         1\n",
+       "Name: 2022-12-01, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.loc['2022-12-01']"
    ]
   },
   {
